[#153] Fix vertical overflow on delete dialog

--- a/client/src/styles/DeleteConfirmationModal.scss
+++ b/client/src/styles/DeleteConfirmationModal.scss
@@ -6,10 +6,9 @@
 .DeleteConfirmationModal {
     height: 100%;
     padding-top: 2rem;
-
     .contents {
+        overflow-y: auto;
         max-height: 100%;
-        overflow-x: scroll;
     }
     ul {
         list-style: initial;
